# claude-wg

./: .gitignore  ONBOARDING.md  README.md  install.sh  pyproject.toml
daemon/: cli.py  config.example.json  daemon.py  state.py
launchd/: com.claude.wg.plist
skills/: wg-approve.md  wg-close.md  wg-join.md  wg-list.md  wg-plan.md  wg-status.md  wg-sync.md  wg.md
tests/: conftest.py  test_cli_commands.py  test_cli_pure.py  test_daemon.py  test_state.py
